--- a/public/css/app.css
+++ b/public/css/app.css
@@ -936,6 +936,54 @@ select {
         right: -160px;
         transition: .2s;
     }
+.shipment-post {
+  position: relative;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+  max-width: 100%;
+  overflow: hidden;
+}
+@media (min-width: 1024px) {
+
+  .shipment-post {
+    height: 350px;
+    width: 500px;
+  }
+}
+.shipment-post__article {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  top: -100%;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+  padding: 1rem;
+  opacity: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+.shipment-post > img {
+  height: 100%;
+  width: 100%;
+}
+.shipment-post:hover .shipment-post__article,
+    .shipment-post:focus .shipment-post__article {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.8;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
 .modal-menu {
   position: fixed;
   left: 0px;
@@ -1112,6 +1160,15 @@ select {
   --tw-text-opacity: 1;
   color: rgb(0 95 158 / var(--tw-text-opacity));
 }
+.about-vehicle {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 155 0 / var(--tw-border-opacity));
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+.static {
+  position: static;
+}
 .fixed {
   position: fixed;
 }
@@ -1120,6 +1177,18 @@ select {
 }
 .relative {
   position: relative;
+}
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+.bottom-2 {
+  bottom: 0.5rem;
+}
+.right-\[30\%\] {
+  right: 30%;
 }
 .right-4 {
   right: 1rem;
@@ -1133,11 +1202,23 @@ select {
 .bottom-5 {
   bottom: 1.25rem;
 }
-.top-0 {
-  top: 0px;
+.top-\[32\.5\%\] {
+  top: 32.5%;
 }
-.right-0 {
-  right: 0px;
+.left-0 {
+  left: 0px;
+}
+.z-\[1\] {
+  z-index: 1;
+}
+.z-20 {
+  z-index: 20;
+}
+.z-30 {
+  z-index: 30;
+}
+.-order-1 {
+  order: -1;
 }
 .row-span-2 {
   grid-row: span 2 / span 2;
@@ -1146,20 +1227,33 @@ select {
   margin-left: auto;
   margin-right: auto;
 }
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-.mt-4 {
-  margin-top: 1rem;
-}
-.ml-4 {
-  margin-left: 1rem;
+.my-36 {
+  margin-top: 9rem;
+  margin-bottom: 9rem;
 }
 .mt-16 {
   margin-top: 4rem;
 }
+.mt-4 {
+  margin-top: 1rem;
+}
+.mb-16 {
+  margin-bottom: 4rem;
+}
 .mt-28 {
   margin-top: 7rem;
+}
+.mb-24 {
+  margin-bottom: 6rem;
+}
+.ml-0 {
+  margin-left: 0px;
+}
+.mb-20 {
+  margin-bottom: 5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mt-20 {
   margin-top: 5rem;
@@ -1170,35 +1264,35 @@ select {
 .mt-24 {
   margin-top: 6rem;
 }
-.mt-40 {
-  margin-top: 10rem;
-}
-.ml-1 {
-  margin-left: 0.25rem;
-}
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mr-2 {
-  margin-right: 0.5rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
-.ml-2 {
-  margin-left: 0.5rem;
+.ml-8 {
+  margin-left: 2rem;
 }
-.mt-8 {
-  margin-top: 2rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
-.ml-12 {
-  margin-left: 3rem;
+.ml-4 {
+  margin-left: 1rem;
 }
-.-mt-px {
-  margin-top: -1px;
+.mt-40 {
+  margin-top: 10rem;
+}
+.mt-12 {
+  margin-top: 3rem;
 }
 .box-border {
   box-sizing: border-box;
 }
 .block {
   display: block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -1212,6 +1306,12 @@ select {
 .hidden {
   display: none;
 }
+.h-\[100\%\] {
+  height: 100%;
+}
+.h-\[600px\] {
+  height: 600px;
+}
 .h-\[80px\] {
   height: 80px;
 }
@@ -1221,27 +1321,28 @@ select {
 .h-40 {
   height: 10rem;
 }
-.h-5 {
-  height: 1.25rem;
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
-.h-8 {
-  height: 2rem;
+.h-\[50px\] {
+  height: 50px;
 }
-.h-16 {
-  height: 4rem;
+.h-full {
+  height: 100%;
 }
-.min-h-screen {
-  min-height: 100vh;
+.h-\[35\%\] {
+  height: 35%;
 }
-.w-full {
+.w-\[100\%\] {
   width: 100%;
-}
-.w-\[70\%\] {
-  width: 70%;
 }
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
+}
+.w-full {
+  width: 100%;
 }
 .w-\[45\%\] {
   width: 45%;
@@ -1249,20 +1350,14 @@ select {
 .w-\[80px\] {
   width: 80px;
 }
-.w-\[100\%\] {
-  width: 100%;
+.w-\[50px\] {
+  width: 50px;
+}
+.w-\[70\%\] {
+  width: 70%;
 }
 .w-\[800px\] {
   width: 800px;
-}
-.w-5 {
-  width: 1.25rem;
-}
-.w-8 {
-  width: 2rem;
-}
-.w-auto {
-  width: auto;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1276,9 +1371,6 @@ select {
 .max-w-full {
   max-width: 100%;
 }
-.max-w-6xl {
-  max-width: 72rem;
-}
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1291,14 +1383,29 @@ select {
 .resize-none {
   resize: none;
 }
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.list-none {
+  list-style-type: none;
+}
+.list-disc {
+  list-style-type: disc;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 .content-center {
   align-content: center;
@@ -1321,14 +1428,30 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
+.gap-4 {
+  gap: 1rem;
+}
+.gap-8 {
+  gap: 2rem;
+}
 .gap-14 {
   gap: 3.5rem;
 }
 .gap-5 {
   gap: 1.25rem;
 }
-.gap-4 {
-  gap: 1rem;
+.gap-12 {
+  gap: 3rem;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 .gap-y-5 {
   row-gap: 1.25rem;
@@ -1342,6 +1465,22 @@ select {
 .gap-y-11 {
   row-gap: 2.75rem;
 }
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.gap-y-8 {
+  row-gap: 2rem;
+}
+.gap-y-4 {
+  row-gap: 1rem;
+}
+.gap-y-6 {
+  row-gap: 1.5rem;
+}
+.self-end {
+  align-self: flex-end;
+}
 .self-center {
   align-self: center;
 }
@@ -1351,42 +1490,47 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 .scroll-smooth {
   scroll-behavior: smooth;
+}
+.text-ellipsis {
+  text-overflow: ellipsis;
 }
 .whitespace-nowrap {
   white-space: nowrap;
 }
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-.border-8 {
-  border-width: 8px;
+.border-2 {
+  border-width: 2px;
 }
 .border-\[10px\] {
   border-width: 10px;
 }
+.border-8 {
+  border-width: 8px;
+}
+.border-t-4 {
+  border-top-width: 4px;
+}
 .border-t-\[10px\] {
   border-top-width: 10px;
 }
-.border-t {
-  border-top-width: 1px;
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 .border-\[\#FF9B00\] {
   --tw-border-opacity: 1;
   border-color: rgb(255 155 0 / var(--tw-border-opacity));
 }
-.border-gray-200 {
+.border-orange-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
 }
-.bg-white {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\/img\/background\/group\.png\'\)\] {
   background-image: url('/img/background/group.png');
@@ -1397,22 +1541,29 @@ select {
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
-.fill-\[\#223062\] {
-  fill: #223062;
-}
 .fill-black {
   fill: #000;
 }
-.p-6 {
-  padding: 1.5rem;
+.fill-\[\#3C4155\] {
+  fill: #3C4155;
 }
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.fill-\[\#223062\] {
+  fill: #223062;
+}
+.p-0 {
+  padding: 0px;
 }
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -1430,10 +1581,6 @@ select {
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1446,12 +1593,23 @@ select {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.py-4 {
-  padding-top: 1rem;
+.pl-0 {
+  padding-left: 0px;
+}
+.pb-4 {
   padding-bottom: 1rem;
 }
-.pr-9 {
-  padding-right: 2.25rem;
+.pb-11 {
+  padding-bottom: 2.75rem;
+}
+.pt-7 {
+  padding-top: 1.75rem;
+}
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+.pt-4 {
+  padding-top: 1rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
@@ -1459,8 +1617,14 @@ select {
 .pb-16 {
   padding-bottom: 4rem;
 }
+.pb-12 {
+  padding-bottom: 3rem;
+}
 .pt-20 {
   padding-top: 5rem;
+}
+.pr-9 {
+  padding-right: 2.25rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -1471,57 +1635,59 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pt-8 {
-  padding-top: 2rem;
-}
-.text-center {
-  text-align: center;
+.pr-4 {
+  padding-right: 1rem;
 }
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
-.font-semibold {
-  font-weight: 600;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
-.font-extrabold {
-  font-weight: 800;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
-.font-bold {
-  font-weight: 700;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-light {
   font-weight: 300;
 }
+.font-bold {
+  font-weight: 700;
+}
+.font-semibold {
+  font-weight: 600;
+}
 .font-medium {
   font-weight: 500;
 }
-.leading-7 {
-  line-height: 1.75rem;
+.font-extrabold {
+  font-weight: 800;
 }
 .text-\[\#111831\] {
   --tw-text-opacity: 1;
   color: rgb(17 24 49 / var(--tw-text-opacity));
 }
-.text-\[\#223062\] {
+.text-\[\#3C4155\] {
   --tw-text-opacity: 1;
-  color: rgb(34 48 98 / var(--tw-text-opacity));
+  color: rgb(60 65 85 / var(--tw-text-opacity));
 }
-.text-\[\#7B7F8B\] {
+.text-\[\#005F9E\] {
   --tw-text-opacity: 1;
-  color: rgb(123 127 139 / var(--tw-text-opacity));
+  color: rgb(0 95 158 / var(--tw-text-opacity));
 }
 .text-\[\#00437B\] {
   --tw-text-opacity: 1;
@@ -1531,45 +1697,19 @@ select {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity));
 }
-.text-gray-200 {
+.text-\[\#223062\] {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(34 48 98 / var(--tw-text-opacity));
 }
-.text-gray-300 {
+.text-\[\#7B7F8B\] {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(123 127 139 / var(--tw-text-opacity));
 }
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+.opacity-50 {
+  opacity: 0.5;
 }
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.underline {
-  text-decoration-line: underline;
-}
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-100 {
+  opacity: 1;
 }
 .transition-all {
   transition-property: all;
@@ -1583,11 +1723,11 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-500 {
-  transition-duration: 500ms;
-}
 .duration-200 {
   transition-duration: 200ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 body {
@@ -1894,108 +2034,27 @@ button{
   fill: #fb923c;
 }
 
+.hover\:text-\[\#3c4155c0\]:hover {
+  color: #3c4155c0;
+}
+
 .hover\:text-blue-900:hover {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 
-@media (prefers-color-scheme: dark) {
-
-  .dark\:border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-}
-
 @media (min-width: 640px) {
+
+  .sm\:right-\[40\%\] {
+    right: 40%;
+  }
 
   .sm\:right-10 {
     right: 2.5rem;
   }
 
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .sm\:block {
-    display: block;
-  }
-
-  .sm\:h-20 {
-    height: 5rem;
-  }
-
-  .sm\:items-center {
-    align-items: center;
-  }
-
-  .sm\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
-
-  .sm\:rounded-lg {
-    border-radius: 0.5rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .sm\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .sm\:text-left {
-    text-align: left;
-  }
-
-  .sm\:text-right {
-    text-align: right;
-  }
-}
-
-@media (min-width: 768px) {
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:border-t-0 {
-    border-top-width: 0px;
-  }
-
-  .md\:border-l {
-    border-left-width: 1px;
+  .sm\:pl-16 {
+    padding-left: 4rem;
   }
 }
 
@@ -2013,6 +2072,22 @@ button{
     right: 45%;
   }
 
+  .lg\:top-\[20\%\] {
+    top: 20%;
+  }
+
+  .lg\:left-\[25\%\] {
+    left: 25%;
+  }
+
+  .lg\:order-1 {
+    order: 1;
+  }
+
+  .lg\:ml-28 {
+    margin-left: 7rem;
+  }
+
   .lg\:mt-16 {
     margin-top: 4rem;
   }
@@ -2025,8 +2100,16 @@ button{
     margin-top: 0px;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:inline {
+    display: inline;
   }
 
   .lg\:flex {
@@ -2041,6 +2124,10 @@ button{
     display: none;
   }
 
+  .lg\:h-\[60\%\] {
+    height: 60%;
+  }
+
   .lg\:w-\[50\%\] {
     width: 50%;
   }
@@ -2049,8 +2136,24 @@ button{
     width: 100%;
   }
 
+  .lg\:w-\[75\%\] {
+    width: 75%;
+  }
+
+  .lg\:w-\[35\%\] {
+    width: 35%;
+  }
+
   .lg\:max-w-6xl {
     max-width: 72rem;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2063,6 +2166,10 @@ button{
 
   .lg\:gap-7 {
     gap: 1.75rem;
+  }
+
+  .lg\:gap-0 {
+    gap: 0px;
   }
 
   .lg\:gap-x-20 {
@@ -2079,6 +2186,10 @@ button{
          column-gap: 8rem;
   }
 
+  .lg\:overflow-x-visible {
+    overflow-x: visible;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -2089,9 +2200,12 @@ button{
     padding-right: 11rem;
   }
 
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .lg\:pl-36 {
+    padding-left: 9rem;
+  }
+
+  .lg\:pl-40 {
+    padding-left: 10rem;
   }
 
   .lg\:pb-0 {
@@ -2106,12 +2220,34 @@ button{
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
 
   .xl\:w-\[60\%\] {
     width: 60%;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+
+  .xl\:self-center {
+    align-self: center;
   }
 
   .xl\:text-5xl {
