--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1190,6 +1190,21 @@ select {
 .right-\[30\%\] {
   right: 30%;
 }
+.top-0 {
+  top: 0px;
+}
+.left-0 {
+  left: 0px;
+}
+.bottom-10 {
+  bottom: 2.5rem;
+}
+.right-\[40\%\] {
+  right: 40%;
+}
+.-right-2 {
+  right: -0.5rem;
+}
 .right-4 {
   right: 1rem;
 }
@@ -1205,8 +1220,23 @@ select {
 .top-\[32\.5\%\] {
   top: 32.5%;
 }
-.left-0 {
-  left: 0px;
+.-right-10 {
+  right: -2.5rem;
+}
+.-right-8 {
+  right: -2rem;
+}
+.-right-0 {
+  right: -0px;
+}
+.top-2 {
+  top: 0.5rem;
+}
+.-top-10 {
+  top: -2.5rem;
+}
+.-top-20 {
+  top: -5rem;
 }
 .z-\[1\] {
   z-index: 1;
@@ -1216,6 +1246,9 @@ select {
 }
 .z-30 {
   z-index: 30;
+}
+.z-10 {
+  z-index: 10;
 }
 .-order-1 {
   order: -1;
@@ -1291,6 +1324,9 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .inline {
   display: inline;
 }
@@ -1331,6 +1367,15 @@ select {
 .h-full {
   height: 100%;
 }
+.h-\[70\%\] {
+  height: 70%;
+}
+.h-\[80\%\] {
+  height: 80%;
+}
+.h-\[60\%\] {
+  height: 60%;
+}
 .h-\[35\%\] {
   height: 35%;
 }
@@ -1352,6 +1397,9 @@ select {
 }
 .w-\[50px\] {
   width: 50px;
+}
+.w-\[90\%\] {
+  width: 90%;
 }
 .w-\[70\%\] {
   width: 70%;
@@ -1412,6 +1460,9 @@ select {
 }
 .content-between {
   align-content: space-between;
+}
+.items-end {
+  align-items: flex-end;
 }
 .items-center {
   align-items: center;
@@ -1490,6 +1541,9 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -1511,6 +1565,9 @@ select {
 .border-8 {
   border-width: 8px;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
 .border-t-4 {
   border-top-width: 4px;
 }
@@ -1520,20 +1577,30 @@ select {
 .border-b-4 {
   border-bottom-width: 4px;
 }
-.border-\[\#FF9B00\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 155 0 / var(--tw-border-opacity));
-}
 .border-orange-400 {
   --tw-border-opacity: 1;
   border-color: rgb(251 146 60 / var(--tw-border-opacity));
+}
+.border-\[\#FF9B00\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 155 0 / var(--tw-border-opacity));
 }
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-\[\#FF9B00F2\] {
+  background-color: #FF9B00F2;
+}
 .bg-\[url\(\'\/img\/background\/group\.png\'\)\] {
   background-image: url('/img/background/group.png');
+}
+.bg-\[url\(\'\/img\/background\/back_footer\.png\'\)\] {
+  background-image: url('/img/background/back_footer.png');
 }
 .bg-bottom {
   background-position: bottom;
@@ -1550,6 +1617,13 @@ select {
 .fill-\[\#223062\] {
   fill: #223062;
 }
+.fill-white {
+  fill: #fff;
+}
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 .p-0 {
   padding: 0px;
 }
@@ -1560,6 +1634,18 @@ select {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .py-10 {
   padding-top: 2.5rem;
@@ -1581,10 +1667,6 @@ select {
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1592,6 +1674,9 @@ select {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 .pl-0 {
   padding-left: 0px;
@@ -1620,6 +1705,9 @@ select {
 .pb-12 {
   padding-bottom: 3rem;
 }
+.pt-10 {
+  padding-top: 2.5rem;
+}
 .pt-20 {
   padding-top: 5rem;
 }
@@ -1631,9 +1719,6 @@ select {
 }
 .pt-24 {
   padding-top: 6rem;
-}
-.pb-1 {
-  padding-bottom: 0.25rem;
 }
 .pr-4 {
   padding-right: 1rem;
@@ -1705,6 +1790,9 @@ select {
   --tw-text-opacity: 1;
   color: rgb(123 127 139 / var(--tw-text-opacity));
 }
+.opacity-70 {
+  opacity: 0.7;
+}
 .opacity-50 {
   opacity: 0.5;
 }
@@ -1737,6 +1825,20 @@ body {
 body.modal-open {
   position: fixed;
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: whitesmoke;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
 }
 
 button{
@@ -1803,6 +1905,32 @@ button{
     line-height: 1;
   }
 }
+
+/* ourShipmentsSwiper */
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet{
+    border-radius: 0;
+    height: 10px;
+    width: 30px;
+    flex-shrink: 0;
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity))}
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet-active {
+    border-radius: 0;
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 146 60 / var(--tw-bg-opacity))}
+
 
 /* GALLERY SWIPER */
 
@@ -2043,6 +2171,10 @@ button{
   color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 
+.hover\:opacity-100:hover {
+  opacity: 1;
+}
+
 @media (min-width: 640px) {
 
   .sm\:right-\[40\%\] {
@@ -2055,6 +2187,13 @@ button{
 
   .sm\:pl-16 {
     padding-left: 4rem;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .md\:h-\[40\%\] {
+    height: 40%;
   }
 }
 
@@ -2078,6 +2217,14 @@ button{
 
   .lg\:left-\[25\%\] {
     left: 25%;
+  }
+
+  .lg\:top-2 {
+    top: 0.5rem;
+  }
+
+  .lg\:right-2 {
+    right: 0.5rem;
   }
 
   .lg\:order-1 {
@@ -2124,6 +2271,14 @@ button{
     display: none;
   }
 
+  .lg\:h-\[80vh\] {
+    height: 80vh;
+  }
+
+  .lg\:h-full {
+    height: 100%;
+  }
+
   .lg\:h-\[60\%\] {
     height: 60%;
   }
@@ -2136,12 +2291,44 @@ button{
     width: 100%;
   }
 
+  .lg\:w-\[70vw\] {
+    width: 70vw;
+  }
+
+  .lg\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
   .lg\:w-\[75\%\] {
     width: 75%;
   }
 
   .lg\:w-\[35\%\] {
     width: 35%;
+  }
+
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .lg\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .lg\:w-\[25\%\] {
+    width: 25%;
+  }
+
+  .lg\:min-w-\[40\%\] {
+    min-width: 40%;
+  }
+
+  .lg\:min-w-\[20\%\] {
+    min-width: 20%;
   }
 
   .lg\:max-w-6xl {
@@ -2190,6 +2377,10 @@ button{
     overflow-x: visible;
   }
 
+  .lg\:fill-\[\#3C4155\] {
+    fill: #3C4155;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -2208,12 +2399,28 @@ button{
     padding-left: 10rem;
   }
 
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
   .lg\:pb-0 {
     padding-bottom: 0px;
   }
 
   .lg\:pb-14 {
     padding-bottom: 3.5rem;
+  }
+
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .lg\:pt-14 {
+    padding-top: 3.5rem;
+  }
+
+  .lg\:pt-20 {
+    padding-top: 5rem;
   }
 
   .lg\:text-3xl {
@@ -2229,6 +2436,14 @@ button{
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:opacity-100 {
+    opacity: 1;
+  }
+
+  .lg\:opacity-70 {
+    opacity: 0.7;
   }
 }
 
