--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,21 @@ body {
 
 body.modal-open {
     @apply overflow-hidden fixed
-  }
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: whitesmoke;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+}
 
 button{
     rotate: none;
@@ -62,6 +76,19 @@ button{
 .section-title {
     @apply text-4xl lg:text-5xl font-semibold font-overpass pl-0 lg:pl-36 
 }
+
+/* ourShipmentsSwiper */
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet{
+    border-radius: 0;
+    @apply bg-gray-400 hover:bg-orange-400 active:bg-orange-400 shrink-0 h-[10px] w-[30px]
+}
+
+.ourShipmentsSwiperImgIn-pagination .swiper-pagination-bullet-active {
+    border-radius: 0;
+    @apply bg-orange-400
+}
+
 
 /* GALLERY SWIPER */
 
