--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1196,14 +1196,17 @@ select {
 .left-0 {
   left: 0px;
 }
+.-top-20 {
+  top: -5rem;
+}
+.right-2 {
+  right: 0.5rem;
+}
 .bottom-10 {
   bottom: 2.5rem;
 }
 .right-\[40\%\] {
   right: 40%;
-}
-.-right-2 {
-  right: -0.5rem;
 }
 .right-4 {
   right: 1rem;
@@ -1211,32 +1214,11 @@ select {
 .top-4 {
   top: 1rem;
 }
-.right-2 {
-  right: 0.5rem;
-}
 .bottom-5 {
   bottom: 1.25rem;
 }
 .top-\[32\.5\%\] {
   top: 32.5%;
-}
-.-right-10 {
-  right: -2.5rem;
-}
-.-right-8 {
-  right: -2rem;
-}
-.-right-0 {
-  right: -0px;
-}
-.top-2 {
-  top: 0.5rem;
-}
-.-top-10 {
-  top: -2.5rem;
-}
-.-top-20 {
-  top: -5rem;
 }
 .z-\[1\] {
   z-index: 1;
@@ -1246,9 +1228,6 @@ select {
 }
 .z-30 {
   z-index: 30;
-}
-.z-10 {
-  z-index: 10;
 }
 .-order-1 {
   order: -1;
@@ -1614,11 +1593,11 @@ select {
 .fill-\[\#3C4155\] {
   fill: #3C4155;
 }
-.fill-\[\#223062\] {
-  fill: #223062;
-}
 .fill-white {
   fill: #fff;
+}
+.fill-\[\#223062\] {
+  fill: #223062;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -1638,10 +1617,6 @@ select {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .py-5 {
   padding-top: 1.25rem;
@@ -2199,6 +2174,14 @@ button{
 
 @media (min-width: 1024px) {
 
+  .lg\:top-2 {
+    top: 0.5rem;
+  }
+
+  .lg\:right-2 {
+    right: 0.5rem;
+  }
+
   .lg\:right-44 {
     right: 11rem;
   }
@@ -2217,14 +2200,6 @@ button{
 
   .lg\:left-\[25\%\] {
     left: 25%;
-  }
-
-  .lg\:top-2 {
-    top: 0.5rem;
-  }
-
-  .lg\:right-2 {
-    right: 0.5rem;
   }
 
   .lg\:order-1 {
@@ -2299,6 +2274,10 @@ button{
     width: 60%;
   }
 
+  .lg\:w-\[100px\] {
+    width: 100px;
+  }
+
   .lg\:w-\[40\%\] {
     width: 40%;
   }
@@ -2311,24 +2290,40 @@ button{
     width: 35%;
   }
 
-  .lg\:w-\[30\%\] {
-    width: 30%;
+  .lg\:w-\[300px\] {
+    width: 300px;
   }
 
-  .lg\:w-\[20\%\] {
-    width: 20%;
+  .lg\:w-\[350px\] {
+    width: 350px;
   }
 
-  .lg\:w-\[25\%\] {
-    width: 25%;
+  .lg\:w-\[400px\] {
+    width: 400px;
   }
 
-  .lg\:min-w-\[40\%\] {
-    min-width: 40%;
+  .lg\:w-\[450px\] {
+    width: 450px;
   }
 
-  .lg\:min-w-\[20\%\] {
-    min-width: 20%;
+  .lg\:w-\[150px\] {
+    width: 150px;
+  }
+
+  .lg\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-\[850px\] {
+    width: 850px;
+  }
+
+  .lg\:w-\[600px\] {
+    width: 600px;
   }
 
   .lg\:max-w-6xl {
@@ -2399,8 +2394,8 @@ button{
     padding-left: 10rem;
   }
 
-  .lg\:pt-0 {
-    padding-top: 0px;
+  .lg\:pt-20 {
+    padding-top: 5rem;
   }
 
   .lg\:pb-0 {
@@ -2409,18 +2404,6 @@ button{
 
   .lg\:pb-14 {
     padding-bottom: 3.5rem;
-  }
-
-  .lg\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem;
-  }
-
-  .lg\:pt-20 {
-    padding-top: 5rem;
   }
 
   .lg\:text-3xl {
@@ -2436,10 +2419,6 @@ button{
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:opacity-100 {
-    opacity: 1;
   }
 
   .lg\:opacity-70 {
